--- a/.github/workflows/.main.yml
+++ b/.github/workflows/.main.yml
@@ -26,7 +26,7 @@ jobs:
         run: mvn clean verify --file ./java/simple-api-with-db/pom.xml
 
 
-# define job to build and publish docker image
+  # define job to build and publish docker image
   build-and-push-docker-image:
     needs: test-backend
     # run only when code is compiling and tests are passing
@@ -40,14 +40,13 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-
     - name: Build image and push backend
       uses: docker/build-push-action@v2
       with: 
       # relative path to the place where source code with  Dockerfile is located
         context: ./java/simple-api-with-db
         # Note: tags has to be all lower-case
-        tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-cpe:simple_api
+        tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-cpe:simple-api
         # build on feature branches, push only on main branch
         push: ${{github.ref == 'refs/heads/main}}
 
@@ -70,5 +69,5 @@ jobs:
       # relative path to the place where source code with  Dockerfile is located
         context: ./http
         # Note: tags has to be all lower-case
-        tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-cpe:http_server
+        tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-cpe:http-server
         push: ${{github.ref == 'refs/heads/main}}
