--- a/.github/workflows/.main.yml
+++ b/.github/workflows/.main.yml
@@ -48,7 +48,7 @@ jobs:
         # Note: tags has to be all lower-case
         tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-cpe:simple-api
         # build on feature branches, push only on main branch
-        push: ${{github.ref == 'refs/heads/main}}
+        push: ${{github.ref == 'refs/heads/main'}}
 
 
 
