--- a/.github/workflows/.main.yml
+++ b/.github/workflows/.main.yml
@@ -25,6 +25,11 @@ jobs:
       - name: Build and test with Maven
         run: mvn clean verify --file ./java/simple-api-with-db/pom.xml
 
+      - name: Analyse with sonar
+        env: 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn -B verify sonar:sonar -Dsonar.projectKey=dc599d03-0619-4425-bd4c-8753a5a8c7c7 -Dsonar.organization=3cc2c7a5-d688-481a-9f31-945ae33a35cc -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }} --file ./java/simple-api-with-db/pom.xml
 
   # define job to build and publish docker image
   build-and-push-docker-image:
