--- a/.github/workflows/.main.yml
+++ b/.github/workflows/.main.yml
@@ -22,8 +22,8 @@ jobs:
           java-version: '11'
 
       #finally build your app with the latest command
-      - name: Build and test with Maven
-        run: mvn clean verify --file ./java/simple-api-with-db/pom.xml
+      # - name: Build and test with Maven
+      #   run: mvn clean verify --file ./java/simple-api-with-db/pom.xml
 
       - name: Analyse with sonar
         env: 
