--- a/.github/workflows/.main.yml
+++ b/.github/workflows/.main.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   test-backend:
     runs-on: ubuntu-18.04
+    env:
+      working-directory: ./java/simple-api-with-db
     steps:
       #checkout your github code using actions/checkout@v2.3.3
       - uses: actions/checkout@v2.3.3
