test optional tasks

--- a/.github/workflows/test_backend.yml
+++ b/.github/workflows/test_backend.yml
@@ -34,4 +34,4 @@ jobs:
       - name: Call build_and_push_image workflow  
         env: 
           working-directory: ./.github/workflows
-        uses: test_backend.yml
+        uses: ./test_backend.yml
