--- a/.github/workflows/test_backend.yml
+++ b/.github/workflows/test_backend.yml
@@ -30,6 +30,7 @@ jobs:
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       #   run: mvn -B verify sonar:sonar -Dsonar.projectKey=adriengvd_s8_devops -Dsonar.organization=adriengvd -Dsonar.host.url=https://sonarcloud.io --file ./java/simple-api-with-db/pom.xml
+  call-workflow:
+    needs: test_backend
+    uses: adriengvd/s8_devops/.github/workflows/test_backend.yml@main
 
-      - name: Call build_and_push_image workflow  
-        uses: adriengvd/s8_devops/.github/workflows/test_backend.yml@main
