test optional tasks

--- a/.github/workflows/test_backend.yml
+++ b/.github/workflows/test_backend.yml
@@ -31,6 +31,6 @@ jobs:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       #   run: mvn -B verify sonar:sonar -Dsonar.projectKey=adriengvd_s8_devops -Dsonar.organization=adriengvd -Dsonar.host.url=https://sonarcloud.io --file ./java/simple-api-with-db/pom.xml
   call-workflow:
-    needs: test_backend
+    needs: test-backend
     uses: adriengvd/s8_devops/.github/workflows/build_and_push_images.yml@main
 
