--- a/ansible/roles/launch_proxy/tasks/main.yml
+++ b/ansible/roles/launch_proxy/tasks/main.yml
@@ -1,2 +1,10 @@
 ---
 # tasks file for roles/launch_proxy
+- name: Create proxy container and connect to network
+  docker_container:
+    name: http_server
+    image: "adriengvd/tp-devops-cpe:http-server"
+    networks:
+      - name: "network_tp3"
+    ports:
+      - '80:80'
