updated tasks main.yml*

--- a/ansible/roles/launch_app/tasks/main.yml
+++ b/ansible/roles/launch_app/tasks/main.yml
@@ -4,5 +4,6 @@
   docker_container:
     name: simple-api-with-db
     image: "adriengvd/tp-devops-cpe:simple-api"
+    pull: true
     networks:
       - name: "network_tp3"
