updated tasks main.yml*

--- a/http/httpd.conf
+++ b/http/httpd.conf
@@ -557,6 +557,6 @@ ServerName localhost
 
 <VirtualHost *:80>
     ProxyPreserveHost On
-    ProxyPass "/api" http://simple-api-with-db:8080/
-    ProxyPassReverse "/api" http://simple-api-with-db:8080/
+    ProxyPass / http://simple-api-with-db:8080/
+    ProxyPassReverse / http://simple-api-with-db:8080/
 </VirtualHost>
