--- a/.github/workflows/test_backend.yml
+++ b/.github/workflows/test_backend.yml
@@ -25,11 +25,11 @@ jobs:
       # - name: Build and test with Maven
       #   run: mvn clean verify --file ./java/simple-api-with-db/pom.xml 
 
-      - name: Analyse with sonar
-        env: 
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B verify sonar:sonar -Dsonar.projectKey=adriengvd_s8_devops -Dsonar.organization=adriengvd -Dsonar.host.url=https://sonarcloud.io --file ./java/simple-api-with-db/pom.xml
+      # - name: Analyse with sonar
+      #   env: 
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #   run: mvn -B verify sonar:sonar -Dsonar.projectKey=adriengvd_s8_devops -Dsonar.organization=adriengvd -Dsonar.host.url=https://sonarcloud.io --file ./java/simple-api-with-db/pom.xml
  
   call-workflow:
     needs: test-backend
