--- a/http/httpd.conf
+++ b/http/httpd.conf
@@ -557,6 +557,8 @@ ServerName localhost
 
 <VirtualHost *:80>
     ProxyPreserveHost On
-    ProxyPass / http://simple-api-with-db:8080/
-    ProxyPassReverse / http://simple-api-with-db:8080/
+    ProxyPass /api http://simple-api-with-db:8080/
+    ProxyPassReverse /api http://simple-api-with-db:8080/
+    ProxyPass / http://front/
+    ProxyPassReverse / http://front/
 </VirtualHost>
