--- a/.github/workflows/build_and_push_images.yml
+++ b/.github/workflows/build_and_push_images.yml
@@ -69,7 +69,7 @@ jobs:
       uses: docker/build-push-action@v2
       with: 
       # relative path to the place where source code with  Dockerfile is located
-        context: ./java/front
+        context: ./front
         # Note: tags has to be all lower-case
         tags: ${{secrets.DOCKERHUB_USERNAME}}/tp-devops-cpe:front
         # build on feature branches, push only on main branch
