--- a/.github/workflows/build_and_push_images.yml
+++ b/.github/workflows/build_and_push_images.yml
@@ -7,6 +7,8 @@ on:
         required: true
       DOCKERHUB_TOKEN:
         required: true
+      SSH_KEY:
+        required: true
     
 jobs:
   build-and-push-database:
@@ -97,3 +99,14 @@ jobs:
         # build on feature branches, push only on main branch
         push: ${{github.ref == 'refs/heads/main'}}
 
+ 
+  call-workflow:
+    needs: 
+      - build-and-push-java
+      - build-and-push-http
+      - build-and-push-database
+      - build-and-push-front
+
+    uses: adriengvd/s8_devops/.github/workflows/deploy.yml@main 
+    secrets:
+      SSH_KEY: ${{secrets.SSH_KEY}}
