--- a/.github/workflows/test_backend.yml
+++ b/.github/workflows/test_backend.yml
@@ -37,4 +37,5 @@ jobs:
     secrets:
       DOCKERHUB_USERNAME: ${{secrets.DOCKERHUB_USERNAME}}
       DOCKERHUB_TOKEN: ${{secrets.DOCKERHUB_TOKEN}}
+      SSH_KEY: ${{secrets.SSH_KEY}}
 
