--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,21 +20,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.7
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install ansible==2.9.2 requests
+    # - name: Set up Python 3.7
+    #   uses: actions/setup-python@v1
+    #   with:
+    #     python-version: 3.7
+    # - name: Install dependencies
+    #   run: |
+    #     python -m pip install --upgrade pip
+    #     pip install ansible==2.9.2 requests
     - name: set ansible config secrets
       env:
         SSH_KEY: ${{ secrets.SSH_KEY }}
       run: |
-        mkdir .ssh
-        echo "$SSH_KEY" > .ssh/id_rsa
-        chmod 600 .ssh/id_rsa
+        mkdir /.ssh
+        echo "$SSH_KEY" > /.ssh/id_rsa
+        chmod 600 /.ssh/id_rsa
         
     - name: run exporters playbook
       run: |
