--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,9 +33,9 @@ jobs:
         SSH_KEY: ${{ secrets.SSH_KEY }}
       run: |
         echo $PWD
-        mkdir .ssh
-        echo "$SSH_KEY" > .ssh/id_rsa
-        chmod 600 .ssh/id_rsa
+        mkdir /home/centos/.ssh
+        echo "$SSH_KEY" > /home/centos/.ssh/id_rsa
+        chmod 600 /home/centos/.ssh/id_rsa
         
     - name: run exporters playbook
       run: |
