--- a/ansible/inventories/setup.yml
+++ b/ansible/inventories/setup.yml
@@ -1,7 +1,7 @@
 all:
   vars:
     ansible_user: centos
-    ansible_ssh_private_key_file: /tmp/
+    ansible_ssh_private_key_file: /tmp/id_rsa
   children:
     prod:
       hosts: 
