--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,22 +19,38 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    # - name: Set up Python 3.7
-    #   uses: actions/setup-python@v1
-    #   with:
-    #     python-version: 3.7
-    # - name: Install dependencies
-    #   run: |
-    #     python -m pip install --upgrade pip
-    #     pip install ansible==2.9.2 requests
-    - name: set ansible config secrets
-      env:
-        SSH_KEY: ${{ secrets.SSH_KEY }}
-      run: |
-        echo 'yo' >> /tmp/id_rsa
-        chmod 600 /tmp/id_rsa
+  #   - uses: actions/checkout@v2
+  #   # - name: Set up Python 3.7
+  #   #   uses: actions/setup-python@v1
+  #   #   with:
+  #   #     python-version: 3.7
+  #   # - name: Install dependencies
+  #   #   run: |
+  #   #     python -m pip install --upgrade pip
+  #   #     pip install ansible==2.9.2 requests
+  #   - name: set ansible config secrets
+  #     env:
+  #       SSH_KEY: ${{ secrets.SSH_KEY }}
+  #     run: |
+  #       echo 'yo' >> /tmp/id_rsa
+  #       chmod 600 /tmp/id_rsa
         
-    - name: run exporters playbook
-      run: |
-        ansible-playbook -i ./ansible/inventories/setup.yml ./ansible/playbook.yml
+  #   - name: run exporters playbook
+  #     run: |
+  #       ansible-playbook -i ./ansible/inventories/setup.yml ./ansible/playbook.yml
+    - name: Run playbook
+      uses: dawidd6/action-ansible-playbook@v2
+      with:
+        # Required, playbook filepath
+        playbook: ./ansible/playbook.yml
+        # Optional, SSH private key
+        key: ${{secrets.SSH_KEY}}
+        # Optional, literal inventory file contents
+        inventory: |
+          all:
+            vars:
+              ansible_user: centos
+            children:
+              prod:
+                hosts: 
+                  adrien.gervraud.takima.cloud:
