--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,18 +1,10 @@
 name: Run ansible playbook
-# on:
-#   #the job is launched from the build_and_push_images workflow
-#   workflow_call:
-#     secrets:
-#       DOCKERHUB_USERNAME:
-#         required: true
-#       DOCKERHUB_TOKEN:
-#         required: true
-#       SSH_KEY:
-#         required: true
-
-on: 
-  push:
-    branches: ['main', 'develop']
+on:
+  #the job is launched from the build_and_push_images workflow
+  workflow_call:
+    secrets:
+      SSH_KEY:
+        required: true
 
 jobs:
   run-playbook:
@@ -20,24 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.7
-  #   # - name: Install dependencies
-  #   #   run: |
-  #   #     python -m pip install --upgrade pip
-  #   #     pip install ansible==2.9.2 requests
-  #   - name: set ansible config secrets
-  #     env:
-  #       SSH_KEY: ${{ secrets.SSH_KEY }}
-  #     run: |
-  #       echo 'yo' >> /tmp/id_rsa
-  #       chmod 600 /tmp/id_rsa
-        
-  #   - name: run exporters playbook
-  #     run: |
-  #       ansible-playbook -i ./ansible/inventories/setup.yml ./ansible/playbook.yml
+
     - name: Run playbook
       uses: dawidd6/action-ansible-playbook@v2
       with:
