--- a/.github/workflows/test_backend.yml
+++ b/.github/workflows/test_backend.yml
@@ -31,11 +31,15 @@ jobs:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       #   run: mvn -B verify sonar:sonar -Dsonar.projectKey=adriengvd_s8_devops -Dsonar.organization=adriengvd -Dsonar.host.url=https://sonarcloud.io --file ./java/simple-api-with-db/pom.xml
  
-  call-workflow:
+  call-build_and_push_images:
     needs: test-backend
     uses: adriengvd/s8_devops/.github/workflows/build_and_push_images.yml@main 
     secrets:
       DOCKERHUB_USERNAME: ${{secrets.DOCKERHUB_USERNAME}}
       DOCKERHUB_TOKEN: ${{secrets.DOCKERHUB_TOKEN}}
-      SSH_KEY: ${{secrets.SSH_KEY}}
 
+  call-deploy:
+    needs: call-build_and_push_images
+    uses: adriengvd/s8_devops/.github/workflows/deploy.yml@main 
+    secrets:
+      SSH_KEY: ${{secrets.SSH_KEY}}
