--- a/.github/workflows/test_backend.yml
+++ b/.github/workflows/test_backend.yml
@@ -25,13 +25,13 @@ jobs:
       # - name: Build and test with Maven
       #   run: mvn clean verify --file ./java/simple-api-with-db/pom.xml 
 
-      # - name: Analyse with sonar
-      #   env: 
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      #   run: mvn -B verify sonar:sonar -Dsonar.projectKey=adriengvd_s8_devops -Dsonar.organization=adriengvd -Dsonar.host.url=https://sonarcloud.io --file ./java/simple-api-with-db/pom.xml
+      - name: Analyse with sonar
+        env: 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn -B verify sonar:sonar -Dsonar.projectKey=adriengvd_s8_devops -Dsonar.organization=adriengvd -Dsonar.host.url=https://sonarcloud.io --file ./java/simple-api-with-db/pom.xml
  
-  call-build_and_push_images:
+  call-build-and-push-images:
     needs: test-backend
     uses: adriengvd/s8_devops/.github/workflows/build_and_push_images.yml@main 
     secrets:
@@ -39,7 +39,7 @@ jobs:
       DOCKERHUB_TOKEN: ${{secrets.DOCKERHUB_TOKEN}}
 
   call-deploy:
-    needs: call-build_and_push_images
+    needs: call-build-and-push-images
     uses: adriengvd/s8_devops/.github/workflows/deploy.yml@main 
     secrets:
       SSH_KEY: ${{secrets.SSH_KEY}}
