--- a/ansible/roles/launch_app/tasks/main.yml
+++ b/ansible/roles/launch_app/tasks/main.yml
@@ -1,8 +1,17 @@
 ---
 # tasks file for roles/launch_proxy
-- name: Create proxy container and connect to network
+- name: Create app container and connect to network
   docker_container:
-    name: simple-api-with-db
+    name: simple-api-1
     image: "adriengvd/tp-devops-cpe:simple-api"
     networks:
       - name: "network_tp3"
+      
+- name: Create app container and connect to network
+  docker_container:
+    name: simple-api-2
+    image: "adriengvd/tp-devops-cpe:simple-api"
+    networks:
+      - name: "network_tp3"
+    
+      
