--- a/http/httpd.conf
+++ b/http/httpd.conf
@@ -555,18 +555,18 @@ SSLRandomSeed connect builtin
 
 ServerName localhost
 
-<Proxy "balancer://myAPI">
-    BalancerMember "http://simple-api-1:80"
-    BalancerMember "http://simple-api-2:80"
-</Proxy>
+# <Proxy "balancer://myAPI">
+#     BalancerMember "http://simple-api-1:80"
+#     BalancerMember "http://simple-api-2:80"
+# </Proxy>
 
 
 <VirtualHost *:80>
     ProxyPreserveHost On
-    ProxyPass        "/api" "balancer://myAPI"
-    ProxyPassReverse "/api" "balancer://myAPI"
-    # ProxyPass /api http://simple-api-with-db:8080/
-    # ProxyPassReverse /api http://simple-api-with-db:8080/
+    # ProxyPass        "/api" "balancer://myAPI"
+    # ProxyPassReverse "/api" "balancer://myAPI"
+    ProxyPass /api http://simple-api-with-db:8080/
+    ProxyPassReverse /api http://simple-api-with-db:8080/
     ProxyPass / http://front/
     ProxyPassReverse / http://front/
 </VirtualHost>
